[project]
name = "roman-numerals-kata-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
